# baby_jubjub_ecc

./: CMakeLists.txt  work.sh
baby_jubjub_ecc/: CMakeLists.txt  baby_jubjub.cpp  baby_jubjub.hpp  baby_jubjub_ecc.hpp  identity_proof.cpp  identity_proof.hpp  impl.tcc  iup_10  iup_100  iup_20  iup_50  leader_proof.cpp  leader_proof.hpp  main.cpp  main_back.cpp  merkle_tree.cpp  merkle_tree.hpp  mul_cmp.cpp  mul_cmp.hpp  pedersen_commitment.cpp  pedersen_commitment.hpp  pedersen_hash.cpp  pedersen_hash.hpp  pow_proof.cpp  pow_proof.hpp  prc.cpp  prc.h  prc.tcc  test_identity_update.cpp  test_leader_proof.cpp  test_merkle_tree.cpp  test_mul_cmp.cpp  test_pedersen_hash.cpp  test_pow_proof.cpp  test_prc.cpp  utils.cpp  utils.hpp
